--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -1,3 +1,6 @@
+.modal-backdrop {
+    z-index: 1049;
+}
 .mfp-close-btn-in .mfp-close {
     top: 1rem;
     right: 1rem;
@@ -383,16 +386,19 @@ section.news-feed {
                 font-weight: 300;
             }
             &--media {
-                display: block;
                 position: relative;
+                display: block;
                 width: 100%;
-                height: 300px;
+                height: 0 !important;
+                padding-bottom: 56.25%;
                 overflow: hidden;
-                img,
-                iframe {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                img, iframe {
+                    position: absolute !important;
+                    top: 0 !important;
+                    left: 0 !important;
+                    width: 100% !important;
+                    height: 100% !important;
+                    object-fit: cover !important;
                 }
             }
         }
