macke comment box scrollable

--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -309,6 +309,41 @@ html
                                         
                                         .post__comments--details
                                             h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
                                             p consectetur adipisicing elit.
 
         .post-holder.modal.fade#post-holder
