--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -112,19 +112,28 @@ header.header {
                             opacity: 1;
                             transform: translateY(0);
                             &:nth-child(1) {
-                                transition-delay: .4s;
+                                transition-delay: 0s;
                             }
                             &:nth-child(2) {
-                                transition-delay: .6s;
+                                transition-delay: .1s;
                             }
                             &:nth-child(3) {
-                                transition-delay: .8s;
+                                transition-delay: .2s;
                             }
                             &:nth-child(4) {
-                                transition-delay: 1s;
+                                transition-delay: .3s;
                             }
                             &:nth-child(5) {
-                                transition-delay: 1.2s;
+                                transition-delay: .4s;
+                            }
+                            &:nth-child(6) {
+                                transition-delay: .5s;
+                            }
+                            &:nth-child(7) {
+                                transition-delay: .6s;
+                            }
+                            &:nth-child(8) {
+                                transition-delay: .8s;
                             }
                         }
                     }
