--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -238,8 +238,8 @@ section.news-feed {
                 max-height: 100vh;
                 object-fit: cover;
                 @media (max-width: 767px) {
-                    min-height: 100%;
-                    max-height: 100%;
+                    min-height: initial;
+                    max-height: initial;
                     height: auto;
                     object-fit: contain;
                 }
