recreate svg icons for coins

--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -33,14 +33,14 @@ html
                                         | bandeja coins 
                                     span
                                         | 145
-                                        img(src="img/bc.png", alt="", class="ml-1")
+                                        img(src="img/bc.svg", alt="", class="ml-1")
                                 li
                                     span
                                         i.fas.fa-ellipsis-v.mr-2
                                         | gift coins 
                                     span
                                         | 75
-                                        img(src="img/gc.png", alt="", class="ml-1")
+                                        img(src="img/gc.svg", alt="", class="ml-1")
                                 .transaction-btn
                                     a(href="#") transactions
                     .col-lg-4.col-md-6.order-md-0.order-first
