--- a/src/sass/pages/_profile.scss
+++ b/src/sass/pages/_profile.scss
@@ -104,11 +104,10 @@ section.profile-page {
       width: 150px;
       height: 150px;
       position: relative;
-      left: 50%;
+      left: 50%;overflow: hidden;
       top: 50%;
       transform: translate(-50%, -50%);
       z-index: 2;
-      overflow: hidden;
       opacity: 0;
       border-radius: 50%;
       box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
@@ -251,13 +250,31 @@ section.profile-page {
             }
           }
           &:first-child {
-            animation-delay: 4s;
+            animation-delay: 3s;
           }
           &:nth-child(2) {
-            animation-delay: 4.3s;
+            animation-delay: 3.1s;
           }
           &:nth-child(3) {
-            animation-delay: 4.7s;
+            animation-delay: 3.2s;
+          }
+          &:nth-child(4) {
+            animation-delay: 3.3s;
+          }
+          &:nth-child(5) {
+            animation-delay: 3.4s;
+          }
+          &:nth-child(6) {
+            animation-delay: 3.5s;
+          }
+          &:nth-child(7) {
+            animation-delay: 3.6s;
+          }
+          &:nth-child(8) {
+            animation-delay: 3.7s;
+          }
+          &:nth-child(9) {
+            animation-delay: 3.8s;
           }
           &:last-child {
             border-bottom: 0;
@@ -315,17 +332,16 @@ section.profile-page {
     background: #e0e0e0;
   }
   50% {
-    // top: 50%;
     top: 0;
     transform: translate(-50%, 0);
     border-radius: 4px;
   }
   100% {
+    top: 0;
     width: 100%;
-    height: 500px;
+    height: auto;
     border-radius: 4px;
     background: $mainColor;
-    top: 0;
     transform: translate(-50%, 0);
   }
 }
