Convert img to webp

--- a/src/style.css
+++ b/src/style.css
@@ -6860,7 +6860,7 @@ aside.sidebar .sidebar-wrapper .slick-dots li.slick-active button {
 }
 
 .log-page .container .bg-form {
-	background     : url("../img/homeSlider/slide04.jpeg") center no-repeat;
+	background     : url("../img/homeSlider/slide04.webp") center no-repeat;
 	background-size: cover;
 	width          : 100%;
 	height         : 100%
