--- a/src/style.css
+++ b/src/style.css
@@ -5138,6 +5138,33 @@ body {
 	overflow-x : hidden
 }
 
+body.darkmode--activated {
+	background-color: #000;
+}
+
+.mode-switcher {
+	position: fixed;
+	bottom  : 3%;
+	left    : 3%;
+	z-index : 99999999;
+}
+
+.mode-switcher button {
+	all             : unset;
+	cursor          : pointer;
+	width           : 40px;
+	height          : 40px;
+	border-radius   : 50%;
+	display         : flex;
+	justify-content : center;
+	align-items     : center;
+	background-color: #111;
+}
+
+.darkmode--activated .mode-switcher button {
+	background-color: #fff;
+}
+
 .container {
 	background: #f2f2f2;
 	position  : relative;
@@ -5602,7 +5629,7 @@ header.header .container .nav--bar .bars:hover .line {
 	width                : 100%;
 	height               : 100vh;
 	background           : #fff;
-	z-index              : 999999;
+	z-index              : 99999999;
 	display              : -webkit-box;
 	display              : -ms-flexbox;
 	display              : flex;
