--- a/src/style.css
+++ b/src/style.css
@@ -5155,9 +5155,15 @@ body.darkmode--activated {
 	width           : 40px;
 	height          : 40px;
 	border-radius   : 50%;
+	display         : -webkit-box;
+	display         : -ms-flexbox;
 	display         : flex;
-	justify-content : center;
-	align-items     : center;
+	-webkit-box-pack : center;
+	    -ms-flex-pack : center;
+	        justify-content : center;
+	-webkit-box-align     : center;
+	    -ms-flex-align     : center;
+	        align-items     : center;
 	background-color: #111;
 }
 
@@ -6100,8 +6106,8 @@ header.header .container .nav--bar .bars:hover .line {
 	left               : 0;
 	width              : 100%;
 	height             : 100%;
-	background         : -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, #f2f2f2));
 	background         : -o-linear-gradient(top, transparent 0%, #f2f2f2 90%);
+	background         : -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, #f2f2f2));
 	background         : linear-gradient(to bottom, transparent 0%, #f2f2f2 90%);
 	background-size    : 100% 100%;
 	background-position: 100% 100%;
@@ -6118,8 +6124,8 @@ header.header .container .nav--bar .bars:hover .line {
 }
 
 .darkmode--activated .banner .inner-banner .slider-wrapper .text-slider .text--slide p:before {
-	background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, #111));
 	background: -o-linear-gradient(top, transparent 0%, #111 90%);
+	background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, #111));
 	background: linear-gradient(to bottom, transparent 0%, #111 90%)
 }
 
@@ -8272,11 +8278,15 @@ section.news-feed .post__match .team {
 		margin-bottom: 0;
 	}
 	section.news-feed .post__match .team.first-team {
-		transform: translate(-2rem, 2.5rem);
+		-webkit-transform: translate(-2rem, 2.5rem);
+		    -ms-transform: translate(-2rem, 2.5rem);
+		        transform: translate(-2rem, 2.5rem);
 	}
 
 	section.news-feed .post__match .team.second-team {
-		transform: translate(2rem, -2.5rem);
+		-webkit-transform: translate(2rem, -2.5rem);
+		    -ms-transform: translate(2rem, -2.5rem);
+		        transform: translate(2rem, -2.5rem);
 	}
 }
 
@@ -8285,8 +8295,12 @@ section.news-feed .post__match ul.team-info {
 }
 
 section.news-feed .post__match ul.team-info li {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	line-height: 1;
 	padding: 0 5px;
 	text-transform: uppercase;
@@ -8302,17 +8316,23 @@ section.news-feed .post__match ul.team-info li.close-icon {
 }
 
 section.news-feed .post__match ul.team-info li:last-child {
-	justify-content: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 }
 
 .post__match ul.team-info li span.left {
-	transform: scaleY(1.2);
+	-webkit-transform: scaleY(1.2);
+	    -ms-transform: scaleY(1.2);
+	        transform: scaleY(1.2);
 }
 
 @media (max-width: 767px) {
 	.post__match ul.team-info li span.left {
 		font-size:14px;
-		transform: scaleY(1);
+		-webkit-transform: scaleY(1);
+		    -ms-transform: scaleY(1);
+		        transform: scaleY(1);
 	}
 }
 
@@ -8333,8 +8353,11 @@ section.news-feed .post__match .team-img img {
 	bottom: 0;
 	width     : 50%;
 	height    : 100%;
-	object-fit: contain;
-	transform: scale(1.1);
+	-o-object-fit: contain;
+	   object-fit: contain;
+	-webkit-transform: scale(1.1);
+	    -ms-transform: scale(1.1);
+	        transform: scale(1.1);
 }
 
 section.news-feed .post__match .team-img img:nth-child(1) {
@@ -8471,7 +8494,9 @@ section.news-feed .post.post__score--match table.match-info td .box ul li {
 	-webkit-box-pack: justify;
 	-ms-flex-pack   : justify;
 	justify-content : space-between;
-	align-items     : center;
+	-webkit-box-align     : center;
+	    -ms-flex-align     : center;
+	        align-items     : center;
 	margin-bottom   : 0.7rem
 }
 
@@ -9668,4 +9693,3 @@ a.checkout-btn:hover {
 .table__info button.print-btn:hover {
 	background-color: #657e1f
 }
-
